fix: setup-jikkou.js

--- a/.github/workflows/setup-jikkou.yml
+++ b/.github/workflows/setup-jikkou.yml
@@ -17,7 +17,7 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest]
-        jikkou-versions: [0.27.0, latest]
+        jikkou-versions: [0.27.0, 0.28.0, latest]
 
     steps:
       - name: Checkout GitHub repository
@@ -29,6 +29,7 @@ jobs:
         uses: ./
         with:
           jikkou_version: ${{ matrix['jikkou-versions'] }}
+          jikkou_config: ./config/jikkouconfig.json
 
       - name: Validate Jikkou Version - ${{ matrix['jikkou-versions'] }}
         if: ${{ matrix['jikkou-versions'] != 'latest' }}
