--- a/action.yaml
+++ b/action.yaml
@@ -6,6 +6,9 @@ inputs:
     description: 'The version of Jikkou CLI to install. A value of `latest` will install the latest version of Jikkou CLI. Defaults to `latest`.'
     default: 'latest'
     required: false
+  jikkou_config:
+    description: 'The path to the Jikkou CLI config file. If set, Jikkou CLI will be configured through the `JIKKOUCONFIG` environment variable.'
+    required: false
 runs:
   using: 'node20'
   main: 'dist/index.js'
