--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "jikkou-github-actions",
+  "name": "setup-jikkou",
   "version": "0.1.0",
-  "description": "",
+  "description": "Setup Jikkou CLI for GitHub Actions",
   "main": "index.js",
   "repository": {
     "type": "git",
@@ -21,7 +21,7 @@
     "bundle": "npm run format:write && npm run package",
     "format:write": "prettier --write **/*.js",
     "format:check": "prettier --check **/*.js",
-    "package": "ncc build index.js --license LICENSE",
+    "package": "ncc build wrapper/jikkou.js --out wrapper/dist && ncc build index.js --license LICENSE",
     "package:watch": "npm run package -- --watch",
     "all": "npm run format:write && npm run package"
   },
@@ -31,10 +31,12 @@
     "@actions/github": "^5.1.1",
     "@actions/http-client": "^2.1.1",
     "@actions/io": "^1.1.3",
-    "@actions/tool-cache": "^2.0.1"
+    "@actions/tool-cache": "^2.0.1",
+    "@types/node": "^20.7.2"
   },
   "devDependencies": {
     "@vercel/ncc": "^0.38.0",
-    "prettier": "^3.0.3"
+    "prettier": "^3.0.3",
+    "typescript": "^5.2.2"
   }
 }
